--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ textarea{
     background-color: var(--primary-color);
     border: none;
     font-size: medium;
+    font-weight: 700;
 }
 
 #output{
